--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ application.properties
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
+application.yml
+application-local.yml
 application.properties
 .DS_Store
 
