refactor:커밋 템플릿 적용 및 로거 설정
(#3)

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@ bin/
 application.yml
 application-local.yml
 application-pub.yml
+broom-app.tar
+deploy.sh
+Dockerfile
 application.properties
 secure.properties
 pub.properties
