--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,12 @@ dependencies {
 	//spring doc
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
+	// Log4j2 Logging
+	implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
+	implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
+	implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.18.0'
+	// xml내 한글 처리
+	implementation 'xerces:xercesImpl:2.12.2'
 
 }
 
